# Artistic-Society

./: .env  Cargo.toml  README.md
client/artistic-society/: package-lock.json  package.json
client/artistic-society/@types/: alltypes.d.ts
client/artistic-society/components/: Hello.tsx
client/artistic-society/pages/: index.tsx
client/artistic-society/public/: portrait.jfif  portrait2.jfif
client/artistic-society/styles/: Home.module.css
migrations/2022-07-28-160906_init_tables/: down.sql  up.sql
server/: Cargo.toml  readme.txt
server/src/: lib.rs  main.rs
server/src/db/: mod.rs
server/src/models/: images.rs  mod.rs  songs.rs
server/src/routes/: enies.rs  mod.rs
src/models/: artists.rs  images.rs  mod.rs  schema.rs  songs.rs
